cif/org.eclipse.escet.cif.tests/tests/checks/InvNoSpecificInvsCheckSubsets.cif.check.err
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 26, column 7: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 27, column 1: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 31, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 39, column 11: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 43, column 5: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 44, column 17: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 45, column 30: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 49, column 16: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 74, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 75, column 29: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 76, column 25: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 77, column 11: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 79, column 16: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 85, column 19: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 87, column 15: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 88, column 21: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 90, column 20: Duplicate invariant for event "e".
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 94, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 96, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 97, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 98, column 3: Duplicate state invariant.
WARNING: File "checks/InvNoSpecificInvsCheckSubsets.cif": Semantic warning at line 99, column 27: Duplicate invariant for event "e".
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -------------------------------------------------------------------
  (1/2) Invariant is a plant 'needs' state/event exclusion invariant.
  -------------------------------------------------------------------
   * In the top-level scope of the specification:
     - plant invariant e needs true;
             ^
   * In location "different_locs.loc3":
     - plant invariant e needs true;
             ^
   * In group "g.p":
     - plant invariant e needs true;
             ^
   * In automaton "named_invs":
     - plant invariant I3: e needs true;
                       ^
   * In automaton "nameless_loc":
     - plant invariant e needs true;
             ^

  ---------------------------------------------------------------
  (2/2) Invariant is a requirement state invariant in a location.
  ---------------------------------------------------------------
   * In location "different_locs.loc4":
     - requirement invariant true;
                   ^
   * In automaton "named_invs":
     - requirement invariant I5: true;
                             ^
   * In automaton "nameless_loc":
     - requirement invariant true;
                   ^
